# server-management-tools

./: .gitignore  README.md  build.sh  deploy_remote.sh  deploy_usb.sh  multipass_copy.txt  pyproject.toml  pytest.ini  run-wg-macos.txt  setup.sh
ai_prompts/: docstrings.prompt
data/: autostart.service  dnsmasq.conf  docker-compose.yml  nftables.conf  ssl.conf
data/gitea/: app.ini
data/nftables.d/: 10-host-fw.nft
data/nginx/: nginx.conf
data/nginx/sites-available/: gitea.app  gitea.internal.app  postgresql.app  postgresql.internal.app
data/systemd/resolved.conf.d/: 10-wg-split-dns.conf
data/wireguard/: wg0.client.conf  wg0.server.conf  wg0.shared.conf
src/packages_engine/: __init__.py
src/packages_engine/commands/: __init__.py  autostart_command.py  configure_command.py  install_command.py  self_deploy_command.py
src/packages_engine/models/: __init__.py  operation_result.py
src/packages_engine/models/configuration/: __init__.py  configuration_content.py  configuration_data.py
src/packages_engine/services/: __init__.py
src/packages_engine/services/configuration/: __init__.py
src/packages_engine/services/file_system/: __init__.py  file_system_service.py  file_system_service_contract.py  file_system_service_mock.py
src/packages_engine/services/input_collection/: __init__.py  input_collection_service.py  input_collection_service_contract.py  input_collection_service_mock.py
src/packages_engine/services/installer/: __init__.py  installer_service.py  installer_service_contract.py  installer_service_mock.py
src/packages_engine/services/notifications/: __init__.py  notification_service_contract.py  notifications_service.py  notifications_service_mock.py
src/packages_engine/services/package_controller/: __init__.py  package_controller_service.py  package_controller_service_contract.py  (+1 more)
tests/packages_engine/commands/: autostart_command_test.py  configure_command_test.py  install_command_test.py  self_deploy_command_test.py
tools/autostart/: main.py
tools/configurator/: main.py
tools/installer/: main.py
tools/self-deploy/: main.py
tools/self_deploy/: main.py
(+163 files in other folders)
