[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server-management-tools"
version = "0.0.2"
description = "Smart package management service for Ubuntu Server automation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "packaging>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]