[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server-management-tools"
version = "0.0.2"
description = "Smart package management service for Ubuntu Server automation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "packaging>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pylint>=3.3.8",
  "black>=25.9.0",
  "isort>=6.1.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
